infrastructure/node-main/ns-argo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  labels:
    app.kubernetes.io/name: argocd-server
spec:
  ingressClassName: traefik
  rules:
    - host: argocd.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
